--- a/generators/node/package.json
+++ b/generators/node/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "colors": "0.6.x",
+    "dashdash": "^1.14.1",
     "express": "^4.12.4",
     "jsonfile": "^2.3.1",
     "lodash": "latest",
