--- a/generators/node/obmConfig.json
+++ b/generators/node/obmConfig.json
@@ -11,11 +11,11 @@
           "mdb": "OBM Health Status",
           "label": "Overall",
           "type": "PIE",       
-          "numberOfCritical" : {"range": [0,10], "format": "int"},
-          "numberOfMajor" : {"range": [0,10], "format": "int"},
-          "numberOfMinor" : {"range": [0,10], "format": "int"},
-          "numberOfNormal" : {"range": [0,10], "format": "int"},
-          "numberOfUnknown" : {"range": [0,10], "format": "int"},
+          "numberOfCritical" : {"range": [0,10], "format": "0"},
+          "numberOfMajor" : {"range": [0,10], "format": "0"},
+          "numberOfMinor" : {"range": [0,10], "format": "0"},
+          "numberOfNormal" : {"range": [0,10], "format": "0"},
+          "numberOfUnknown" : {"range": [0,10], "format": "0"},
           "mostCritical" : "(function (data) { if (data.numberOfCritical >0 ) {return 'CRITICAL';} else if (data.numberOfMajor >0 ) {return 'MAJOR';} else if (data.numberOfMinor > 0) {return 'MINOR';} else return 'NORMAL';})"
         },
         "tags":"omi,mdb",
