Added frequency to the generators

--- a/generators/node/obmConfig.json
+++ b/generators/node/obmConfig.json
@@ -18,6 +18,8 @@
           "numberOfUnknown" : {"range": [0,10], "format": "int"},
           "mostCritical" : "(function (data) { if (data.numberOfCritical >0 ) {return 'CRITICAL';} else if (data.numberOfMajor >0 ) {return 'MAJOR';} else if (data.numberOfMinor > 0) {return 'MINOR';} else return 'NORMAL';})"
         },
+        "frequency":5000,
+        "tolerance":100,
         "tags":"omi,mdb",
         "dims":"mdb,label,type"
       },
@@ -29,6 +31,8 @@
           "kpiName": ["System Performance","Unassigned Events"],
           "status": ["Critical","Major","Minor","Warning", "Info","Ok","DownTime","No Data","UnKnown"]
         },
+        "frequency":5000,
+        "tolerance":100,
         "tags":"omi,kpi",
         "dims":"viewName,ciName,kpiName"
       } 
